; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_buffer.c_bufnew.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_buffer.c_bufnew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.buf* @bufnew(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.buf*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call %struct.buf* @malloc(i32 32)
  store %struct.buf* %4, %struct.buf** %3, align 8
  %5 = load %struct.buf*, %struct.buf** %3, align 8
  %6 = icmp ne %struct.buf* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.buf*, %struct.buf** %3, align 8
  %9 = getelementptr inbounds %struct.buf, %struct.buf* %8, i32 0, i32 3
  store i64 0, i64* %9, align 8
  %10 = load %struct.buf*, %struct.buf** %3, align 8
  %11 = getelementptr inbounds %struct.buf, %struct.buf* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.buf*, %struct.buf** %3, align 8
  %13 = getelementptr inbounds %struct.buf, %struct.buf* %12, i32 0, i32 2
  store i64 0, i64* %13, align 8
  %14 = load i64, i64* %2, align 8
  %15 = load %struct.buf*, %struct.buf** %3, align 8
  %16 = getelementptr inbounds %struct.buf, %struct.buf* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %17

17:                                               ; preds = %7, %1
  %18 = load %struct.buf*, %struct.buf** %3, align 8
  ret %struct.buf* %18
}

declare dso_local %struct.buf* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
